--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 footer-links:
   dribbble:
   email:
-  facebook: https://www.facebook.com/raitml/
+  facebook: raitml
   flickr:
-  github: https://github.com/raitml/
+  github: raitml
   instagram:
   linkedin:
   pinterest:
