--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: RAIT Machine Learning Group
+name: ML/AI @RAIT
 
 # Short bio or description (displayed in the header)
-description: We are a bunch of students interested in Machine Learning/AI
+description: Machine Learning/AI student group at RAIT
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
